[gd_scene load_steps=2 format=3 uid="uid://dungeon_day_module"]

[ext_resource type="Script" path="res://Modules/DUNGEON/Scripts/dungeon_day.gd" id="1_dungeon"]

[node name="DungeonDay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dungeon")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18, 0.22, 0.2, 1)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="LabelFloor" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "던전 1층"
horizontal_alignment = 1

[node name="NodeButtons" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LabelStatus" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "현재 노드: 0 | 룻: []"

[node name="BtnToHub" type="Button" parent="Margin/VBox"]
layout_mode = 2
text = "← 거점으로"
